--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,9 +108,25 @@ html {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: 0.1; /* Adjust opacity as needed */
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Cdefs%3E%3Cpattern id='wave' width='100' height='100' patternUnits='userSpaceOnUse'%3E%3Cpath d='M0,50 C20,80 50,20 100,50' fill='none' stroke='%23E0E0E0' stroke-width='1'/%3E%3C/pattern%3E%3C/defs%3E%3Crect width='100%25' height='100%25' fill='url(%23wave)'/%3E%3C/svg%3E");
+  opacity: 0.3; /* Adjust opacity as needed */
+  background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Circle cx='30' cy='30' r='29' fill='rgba(224,224,224,0.04)' stroke='%23E0E0E0' stroke-width='2' stroke-dasharray='4 4'/%3E%3C/svg%3E");
 }
 
 /* Add more geometric patterns or customize the existing one as desired */
+.navbar-button {
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+  color: hsl(var(--portfolio-accent));
+}
+
+.navbar-button:hover {
+  background-color: white;
+  color: hsl(var(--portfolio-accent));
+}
+
+/* Style for when the button is active */
+.navbar-button.active {
+  background-color: white; /* Solid white background */
+  color: hsl(var(--portfolio-accent));
+}
 
