--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,8 +42,8 @@ body {
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
 
-    --portfolio-background: 210 11% 7%;
-    --portfolio-foreground: 0 0% 88%;
+    --portfolio-background: 19 17% 7%;
+    --portfolio-foreground: 200 14% 88%;
     --portfolio-accent: 180 100% 25%;
   }
   .dark {
@@ -80,8 +80,8 @@ body {
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
 
-    --portfolio-background: 210 11% 7%;
-    --portfolio-foreground: 0 0% 88%;
+    --portfolio-background: 19 17% 7%;
+    --portfolio-foreground: 200 14% 88%;
     --portfolio-accent: 180 100% 25%;
   }
 }
@@ -109,7 +109,7 @@ html {
   height: 100%;
   z-index: -1;
   opacity: 0.3; /* Adjust opacity as needed */
-  background-image: url("data:image/svg+xml,%3Csvg width='42' height='48' viewBox='0 0 42 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0H12V16H0V0Z' fill='rgba(224,224,224,0.04)'/%3E%3Cpath d='M0 32H12V48H0V32Z' fill='rgba(224,224,224,0.04)'/%3E%3Cpath d='M30 0H42V16H30V0Z' fill='rgba(224,224,224,0.04)'/%3E%3Cpath d='M30 32H42V48H30V32Z' fill='rgba(224,224,224,0.04)'/%3E%3Cpath d='M15 16H27V32H15V16Z' fill='rgba(224,224,224,0.04)'/%3E%3C/svg%3E%0A");
+  background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='100' height='100' fill='rgba(224,224,224,0.04)'/%3E%3Cpath d='M0 0L100 100' stroke='rgba(224,224,224,0.04)'/%3E%3Cpath d='M100 0L0 100' stroke='rgba(224,224,224,0.04)'/%3E%3C/svg%3E");
 }
 
 /* Add more geometric patterns or customize the existing one as desired */
