--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,3 +129,7 @@ html {
   background-color: white; /* Solid white background */
   color: hsl(var(--portfolio-accent));
 }
+
+.navbar-solid {
+    background-color: #000000;
+}
