changed font colour and size

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,11 +126,12 @@ html {
 
 /* Style for when the button is active */
 .navbar-button.active {
-  color: black; /* Solid white background */
+  color: white; /* Solid white background */
   background-color: transparent;
 }
 
 .navbar-solid {
     background-color: black;
 }
+
 
