--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,16 +100,17 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Styles for geometric background */
+/* Styles for topographic background */
 .geometric-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  opacity: 0.1; /* Adjust opacity as needed */
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill='%23e0e0e0' fill-opacity='0.2'%3E%3Cpath d='M0 0h20v20H0V0zm20 20h20v20H20V20zm-20 0h20v20H0V20zm20-20h20v20H20V0z'/%3E%3C/g%3E%3C/svg%3E");
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.2; /* Adjust opacity as needed */
+    background-image: url("https://i.stack.imgur.com/6eaEq.png"); /* Replace with the URL of your topographic image */
+    background-size: cover; /* Adjust as needed */
 }
 
 /* Add more geometric patterns or customize the existing one as desired */
@@ -133,5 +134,3 @@ html {
 .navbar-solid {
     background-color: black;
 }
-
-
